fix: change the size of shift

--- a/style.css
+++ b/style.css
@@ -93,7 +93,7 @@ main {
 }
 
 .ShiftRight {
-  width: 87px;
+  width: 45px;
 }
 
 .title_message {
